deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multichain-node
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: multichain-node
        image: sensrnetnl/multichain-node:0.1.0
        ports:
        - name: rpc
          containerPort: 8570
        - name: tcp
          containerPort: 8571
        - name: web
          containerPort: 2750
        volumeMounts:
        - mountPath: /data
          name: multichain-node-data
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
