deployment/base/ingress-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: multichain-ingress-tcp
spec:
  entryPoints:
  - multichain
  routes:
  - match: HostSNI(`*`)
    kind: Rule
    services:
    - name: multichain-node-service
      port: 8571
