deployment/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: multichain-node-ingress
spec:
  entryPoints:
  - http
  routes:
  - kind: Rule
    match: PathPrefix(`/internal/explorer`)
    middlewares:
    - name: requestmodifier-explorer
    services:
    - kind: Service
      name: multichain-node-service
      port: 2750

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: requestmodifier-explorer
spec:
  replacePathRegex:
    regex: ^/internal/explorer/(.*)
    replacement: /$1
